testsuite/tests/interpreter_errors/builtin_namespace/test.out
12
script.lkql:6:7: error: No such member
6 | print(dep.reduce)
  |       ^^^^^^^^^^

